# remote-procedure-call

./: CMakeLists.txt  README.md
example/callee/: CMakeLists.txt  user_service.cc
example/caller/: user.proto
example/protobuff/: proto_gen.sh
example/protobuff/pbgen/: user.pb.cc  user.pb.h
test/protobuff/: a.out  main.cc  make.sh  test.pb.cc  test.pb.h
test/protobuff/pbgen/: test.pb.cc  test.pb.h
